! MPCVideoDecoder: The "Read Aspect Ratio from stream" option didn't always work right
! DVB EPG: Some strings weren't correctly displayed in some cases
! PGS Subtitles: Some subtitles were displayed with wrong colors or even not displayed at all
! EVR-CP renderer: Fix some cases where VSync breaks smooth playback
! Ticket #84, WebServer: The filenames weren't correctly URL decoded
! Ticket #890, DVB: Disable pause for capture mode to avoid accidental playback stop.
! Ticket #1554, The OSD was looking bad when using the EVR Sync renderer
! Ticket #1600, Improve the naming of subtitles tracks (avoid showing a useless and ugly comma)
! Ticket #2396, DVB: Fix default audio track selection when its type is different than first audio track.
! Ticket #2423, Fix wrong rounding leading to small black bars when resizing the window.
  This was mostly visible when using the "auto-fit" zoom or when resizing manually.
! Ticket #2783, Fix crash when generating the chapter marks
! Ticket #2805, AviSplitter: Fix a crash when closing the file while re-indexing
! Ticket #2838, The window wasn't draggable anymore by clicking on the information panel
! Ticket #2839, Post-resize shaders didn't work with VMR-9 (renderless)
! Ticket #2855, The filename could be wrong when saving a screenshot or thumbnails
! Ticket #2859, FLACSource: Improve timestamps accuracy. This fixes some cases where the
  end of the file wasn't played.
! Ticket #2863, The OSD was incorrect when restarting the playback of a file after it ended
! Ticket #2864, VobSub subtitles were autoloaded twice
! Ticket #2881, "Auto-fit" and "Auto-fit (Larger Only)" zooms gave different results
  depending on if they were used in windowed or fullscreen mode.
! Ticket #2889, Fix incorrectly displayed OSD when using EVR and VRM-9 (windowed) renderers
! Ticket #2902, DVB: Some old channels weren't deleted when redoing the scan
! Ticket #2931, DVB Subtitles: Fix a crash with some subtitles streams