@@ -56,6 +56,7 @@ Legend:
 ! PGS Subtitles: Some subtitles were displayed with wrong colors or even not displayed at all
 ! EVR-CP renderer: Fix some cases where VSync breaks smooth playback
 ! Ticket #84, WebServer: The filenames weren't correctly URL decoded
+! Ticket #593, Fixed EVR-CP using the CPU while the player is paused when VSync is on
 ! Ticket #890, DVB: Disable pause for capture mode to avoid accidental playback stop.
 ! Ticket #1554, The OSD was looking bad when using the EVR Sync renderer
 ! Ticket #1600, Improve the naming of subtitles tracks (avoid showing a useless and ugly comma)
